sitemedia/scss/site.scss
/* ... */
.ribbon-wrapper {
  $action-color: rgb(255, 69, 69) !default;
  $ribbon-background: $action-color;
  $ribbon-size: 375px;

  @include size($ribbon-size);
  overflow: hidden;
  position: absolute;
  right: -1px;
  top: -1px;

  .ribbon {
    background-color: $ribbon-background;
    color: #fff;
    font-size: 0.8em;
    right: -75px;
    line-height: 1.5em;
    padding: 2px 7px;
    position: relative;
    text-align: center;
    top: 55px;
    transform: rotate(45deg);
    width: 400px;
  }
}


.project-detail {

    overflow: auto;  /* include floated grid content */
    @include grid-container;

	header {
		@media (min-width: $medium-min-width) {
		    @include grid-column(6);
	  		@include grid-push(3);

		    @media (min-width: $large-min-width) {
			    @include grid-column(9);
		  	}
		  }

	    h2 {
		  font-size: modular-scale(-1);

		    @media (min-width: $large-min-width) {
			    @include grid-column(7);
			    margin-left: 0;
			}
		}

	  	.short_description {
	  		font-style: italic;
		    margin-left: 0;
		    margin-right: 0;

			@media (min-width: $large-min-width) {
				/* according to spec, should be 7 cols, but can't
				   get grid cols right due to nesting should be close enough */
			    width: 75%;
			}
	  	}
	}

	.contributors, .links {
		font-size: 18px;

		@media (min-width: $medium-min-width) {
			@include grid-column(3);
		}

		ul {
			list-style-type: none;
			color: $dark-grey;
			padding: 0;
			margin: 0;
			font-family: $font-stack-headline;

			li.role {
				margin-bottom: 15px;
				font-family: $font-stack-body-text;
			}
		}

		h3 {
			font-weight: normal;
			font-style: italic;
			font-size: 18px;
			margin-bottom: 0;
			font-family: $font-stack-body-text;
		}

        a {
	    	color: black;
	    	text-decoration: none;
	    	font-family: $font-stack-headline;
	    	font-size: 18px;
	    }

	    .cdh-built {
			@include cdh-shadow-label;
			margin-top: 25px;
			display: inline-block;
	    }

	}

	/* link section spans both columns; links in the left sidebar,
   	   project website in the main column to make it more visible */
	.links {
		/* duplicate grid to line up project url with main column */
		@media (min-width: $medium-min-width) {
		    @include grid-column(9);

		    @media (min-width: $large-min-width) {
			    @include grid-column(12);
		  	}
		}

		margin-bottom: 25px;

		li.website a {
			@media (min-width: $medium-min-width) {
				@include grid-container;
				span {
				    @include grid-column(3);
				}
			}

			/* secondary display of website url, to emphasize */
			.url {
				/* hide on mobile */
				@media (max-width: $small-max-width) {
					display: none;
				}

				@media (min-width: $medium-min-width) {
			  		@include grid-push(3);
				    @include grid-column(9);
			  }
			  font-size: 115%;
			  text-indent: 0;
			}
		}

		a:hover {
		    background-color: $light-cdh-blue;
  	 	}

  	 	/* TODO: refactor similar styles, reuse on profile page */

		/* icons for different link types */
		li.website a {
			background-image: url('../img/icons/CDH_icon_link.svg');
			background-repeat: no-repeat;
			background-size: 30px 30px;
			text-indent: 35px;  /* padding pushes the grid */
			@media (max-width: $small-max-width) {
				/* tweak size & indent to align with other icons */
				background-size: contain;
				padding-left: 30px;
				margin-left: 5px;
				text-indent: 0px;
			}
		}

		/* github uses font-awesome */
		li.github a {
			&::before {
			    display: inline-block;
			    font-style: normal;
			    font-variant: normal;
			    text-rendering: auto;
			    -webkit-font-smoothing: antialiased;
			    // font-family: "Font Awesome 5 Free";
			    font-family: "Font Awesome 5 Brands";
			    font-weight: 900;
			    content: "\f09b";  /* github  */
			    // content: "\f092";  /* github square */
			    // content: "\f121"; /* code */
			    width:30px;
			    text-align: center;
			    font-size: 20px;
			    color: $dark-grey;
			}
			padding-left: 0;
		}

		/* twitter also uses font-awesome */
		li.twitter a {
			&::before {
			    display: inline-block;
			    font-style: normal;
			    font-variant: normal;
			    text-rendering: auto;
			    -webkit-font-smoothing: antialiased;
			    font-family: "Font Awesome 5 Brands";
			    font-weight: 900;
			    content: "\f099";  /* github  */
			    width:30px;
			    text-align: center;
			    font-size: 20px;
			    color: $dark-grey;
			}
			padding-left: 0;
		}


	}

	.description {

		@media (min-width: $medium-min-width) {
			@include grid-column(6);
		    @media (min-width: $large-min-width) {
			    @include grid-column(9);
			}
		}

		@media (max-width: $small-max-width) {
			margin-bottom: 100px;
	    }

		img {
			max-width: 100%;
			margin: 0 auto 50px;
		}
		p {
			margin-top: 0;
		}
	}


}
/* ... */

